Fix dropdowns in compose panel not showing up

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10326,11 +10326,6 @@ noscript {
   }
 }
 
-div[data-popper-reference-hidden='true'] {
-  opacity: 0;
-  pointer-events: none;
-}
-
 .hover-card {
   box-shadow: var(--dropdown-shadow);
   background: var(--modal-background-color);
